skeplib/tests/fixtures/resolver/invalid/import_non_exported_symbol/a.sk
fn hidden() -> Int { return 1; }
fn shown() -> Int { return 2; }
export { shown };

